--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "nunomaduro/collision": "^5.10",
         "pestphp/pest": "^1.20",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/pest-plugin-test-time": "^1.0"
     },
     "autoload": {
         "psr-4": {
