--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,7 @@ jobs:
           APP_ENV: testing
         run: |
           composer self-update
-          composer install --${{ matrix.dependency-version }} --no-interaction --no-suggest
+          composer install --${{ matrix.dependency-version }} --no-interaction
       - name: Run migrations
         run: php artisan migrate --env=testing --no-interaction -vvv
 
